projects/examples/source/09.15.cpp
/////////////////////////////////////////////////////////////////////////

// chapter : Memory Management

/////////////////////////////////////////////////////////////////////////

// content : Iterator Invalidation
//
// content : Standard Library Debug Mode
//
// content : Stable Containers
//
// content : Library Boost.Container

/////////////////////////////////////////////////////////////////////////

#include <cassert>
#include <iterator>
#include <vector>

/////////////////////////////////////////////////////////////////////////

#include <boost/container/stable_vector.hpp>

/////////////////////////////////////////////////////////////////////////

int main()
{
	std::vector < int > vector_1 = { 1, 2, 3, 4, 5 };

//  ---------------------------------------------------------------------

	auto iterator_1 = std::begin(vector_1);

//  ---------------------------------------------------------------------

	vector_1.push_back(1);

//  ---------------------------------------------------------------------

//	assert(*iterator_1 == 1); // error

//  ---------------------------------------------------------------------

	boost::container::stable_vector < int > vector_2 = { 1, 2, 3, 4, 5 };

//  ---------------------------------------------------------------------

	auto iterator_2 = std::begin(vector_2);

//  ---------------------------------------------------------------------

	vector_2.push_back(1);

//  ---------------------------------------------------------------------

	assert(*iterator_2 == 1);
}

/////////////////////////////////////////////////////////////////////////